...
                child: Image(image: AssetImage('assets/progress_8.png'))),
            const Padding(
              padding: EdgeInsets.fromLTRB(0, 20, 0, 0),
            ),
            ElevatedButton(
              //Here we are giving the new game button a key for use in our integration tests in test_driver/app_test.dart
              key: const Key('new-game-button'),
              child: const Text("New Game",
                  style: TextStyle(fontSize: 25),
                  //Here we are giving the new game text field a key for use in our integration tests in test_driver/app_test.dart
                  key: Key('new-game-text')),
              onPressed: () async {
                String word =
                    await HangmanGame.getStartingWord(areWeInIntegrationTest);

                HangmanGame game = HangmanGame(word);

...
