...
      child: Center(
        child: Column(
          mainAxisAlignment: MainAxisAlignment.center,
          children: <Widget>[
            //Here we are giving the lose game button a key for use in our integration tests in test_driver/app_test.dart
            const Text("You Lose",
                style: TextStyle(fontSize: 50), key: Key('lose-game-text')),
            const Padding(
              padding: EdgeInsets.fromLTRB(0, 60, 0, 0),
            ),
            const SizedBox(
                height: 300,
                child: Image(image: AssetImage('assets/progress_7.png'))),
...
